bugfix: fix render of special note unicode characters on iOS devices

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'NotoMusic';
+    src: url('NotoMusicRegular.ttf');
+}
+
 @keyframes fadeFail {
   0% {
     background-color: red;
